--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
+    app.kubernetes.io/name: nano-pod-operator
     control-plane: controller-manager
   name: system
 ---
@@ -11,10 +12,12 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
+    app.kubernetes.io/name: nano-pod-operator
     control-plane: controller-manager
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: nano-pod-operator
       control-plane: controller-manager
   replicas: 1
   template:
@@ -22,6 +25,7 @@ spec:
       annotations:
         kubectl.kubernetes.io/default-container: manager
       labels:
+        app.kubernetes.io/name: nano-pod-operator
         control-plane: controller-manager
     spec:
       securityContext:
