--- a/test/simple/nginx-deploy.yaml
+++ b/test/simple/nginx-deploy.yaml
@@ -1,41 +1,41 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-nanopods
-  namespace: nanopod-test
-  labels:
-    app: nginx
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-        nano-pods: "nginx-nano-pod"
-    spec:
-      containers:
-        - image: treezh-docker.pkg.coding.net/demo03/public/nginx:1.21
-          name: nginx
-          livenessProbe:
-            tcpSocket:
-              port: 80
-            initialDelaySeconds: 15
-            periodSeconds: 20
-          readinessProbe:
-            tcpSocket:
-              port: 80
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          resources:
-            limits:
-              cpu: 500m
-              memory: 128Mi
-            requests:
-              cpu: 10m
-              memory: 64Mi
+#apiVersion: apps/v1
+#kind: Deployment
+#metadata:
+#  name: nginx-nanopods
+#  namespace: nanopod-test
+#  labels:
+#    app: nginx
+#spec:
+#  replicas: 1
+#  selector:
+#    matchLabels:
+#      app: nginx
+#  template:
+#    metadata:
+#      labels:
+#        app: nginx
+#        nano-pods: "nginx-nano-pod"
+#    spec:
+#      containers:
+#        - image: treezh-docker.pkg.coding.net/demo03/public/nginx:1.21
+#          name: nginx
+#          livenessProbe:
+#            tcpSocket:
+#              port: 80
+#            initialDelaySeconds: 15
+#            periodSeconds: 20
+#          readinessProbe:
+#            tcpSocket:
+#              port: 80
+#            initialDelaySeconds: 5
+#            periodSeconds: 10
+#          resources:
+#            limits:
+#              cpu: 500m
+#              memory: 128Mi
+#            requests:
+#              cpu: 10m
+#              memory: 64Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
