--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: treezh-docker.pkg.coding.net/demo03/opentelemetry-public/nano-pod-controller
-  newTag: "20220102.2"
+  newName: controller
+  newTag: latest
