add getting started and license

--- a/test/simple/deployment.yaml
+++ b/test/simple/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     metadata:
       labels:
         app:  nginx-nano-pod-enabled
-        nano-pods: ""
+        nano-pods: "my-nano-pod"
     spec:
       containers:
       - name: mysql01
