--- a/test/simple/nanopod.yaml
+++ b/test/simple/nanopod.yaml
@@ -1,7 +1,7 @@
 apiVersion: nanopod.nanopod.treezh.cn/v1
 kind: NanoPod
 metadata:
-  name: default
+  name: my-nano-pod
   namespace: nano-pod-test
 spec:
   template:
@@ -18,45 +18,10 @@ spec:
             value: "value0103"
           - name: "env0102"
             value: "value0103"
-#        livenessProbe:
-#          exec:
-#            command: ["mysqladmin", "ping"]
-#          initialDelaySeconds: 30
-#          periodSeconds: 10
-#          timeoutSeconds: 5
-#        readinessProbe:
-#          exec:
-#            command: ["mysql", "-h", "127.0.0.1", "-e", "SELECT 1"]
-#          initialDelaySeconds: 5
-#          periodSeconds: 2
-#          timeoutSeconds: 1
-      - name: nginx02
-        env:
-          - name: env0201
-            value: value0201
-        image: treezh-docker.pkg.coding.net/demo03/public/nginx:1.21
-        imagePullPolicy: IfNotPresent
-        livenessProbe:
-          failureThreshold: 3
-          initialDelaySeconds: 15
-          periodSeconds: 20
-          successThreshold: 1
-          tcpSocket:
-            port: 80
-          timeoutSeconds: 1
-        readinessProbe:
-          failureThreshold: 3
-          initialDelaySeconds: 5
-          periodSeconds: 10
-          successThreshold: 1
-          tcpSocket:
-            port: 80
-          timeoutSeconds: 1
         resources:
           limits:
             cpu: 500m
-            memory: 128Mi
+            memory: 512Mi
           requests:
-            cpu: 10m
-            memory: 64Mi
-      terminationGracePeriodSeconds: 10
+            cpu: 100m
+            memory: 256Mi
